--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
     <head>
         <div>
             <p>rotateX</p>
-            <input id="inputX" type='range' min="0" max="360"></input>
+            <input id="inputX" type='range' min="0" max="360" step=".1"></input>
             <p>rotateY</p>
-            <input id="inputY" type='range' min="0" max="360"></input>
+            <input id="inputY" type='range' min="0" max="360" step=".1"></input>
             <p>rotateZ</p>
-            <input id="inputZ" type='range' min="0" max="360"></input>
+            <input id="inputZ" type='range' min="0" max="360" step=".1"></input>
             <p>translateX</p>
             <input id="translateX" type='range' min="-200" max="200"></input>
             <p>translateY</p>
@@ -14,7 +14,7 @@
             <p>translateZ</p>
             <input id="translateZ" type='range' min="-200" max="200"></input>
             <p>scale</p>
-            <input id="scaleSlider" type='range' min=".5" max="100"></input>
+            <input id="scaleSlider" type='range' min=".1" max="5" step=".1" value="1"></input>
             <p>3rd Dimension</p>
             <input id="zposition" type='range' min="-12" max="12"></input>
         </div>
